# advanced-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
homework-1/: README.md  pyproject.toml
homework-1/artifacts/: examples.md
homework-1/filescli/: main.py
homework-2/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
homework-2/artifacts/: task1.tex  task2.tex  task2_pypi.txt
homework-2/latexgen/: __init__.py  latex_elements_generation.py
homework-2/tests/: test_table_generation.py
homework-3/: README.md  artifacts_generation.py  pyproject.toml
homework-3/artifacts/3.2/: matrix+.txt  matrix.txt  matrix1.txt  matrix2.txt  matrix@.txt  matrix_multiplication.txt
homework-3/artifacts/3.3/: C.txt  cd.txt  hash.txt
homework-3/numpyclone/: __init__.py  matrix.py  matrix_np.py
homework-3/numpyclone/mixins/: getset.py  hashfunc.py  io.py
homework-3/tests/: test_matrix.py  test_matrix_np.py
homework-4/: artifacts_creation.py  pyproject.toml
homework-4/benchmarking/: fibonacci.py  integrate.py
