[tool.poetry]
name = "homework-2"
version = "0.1.0"
description = ""
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]
readme = "README.md"
packages = [
    { include = "latexgen", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
pdflatex = "^0.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
