[tool.poetry]
name = "benchmarking"
version = "0.1.0"
description = "Multiprocessing and threading learning"
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
